# emergentcti

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  FEED_RUNTIME_CHANGES_2026-02-18.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  ci.yml  security.yml
alembic/: env.py
alembic/versions/: 001_initial.py  001_initial_schema.py  002_add_category.py  002_add_users_auth.py  003_add_description_references_notes.py  003_add_native_confidence.py  004_sso_integration.py  005_enhance_relationships.py  006_attack_framework.py  007_saved_searches.py  008_enrichment_framework.py  009_alerting_webhooks.py  010_threat_actors_campaigns.py  011_audit_log.py  012_correlation_rules.py  013_enrichment_lifecycle.py  014_feed_default_confidence.py
args/: defaults.yaml
context/: architecture.md  confidence_model.md  feed_sources.md  observable_types.md
docs/superpowers/plans/: 2026-06-29-ui-refresh-foundation.md  2026-06-30-dashboard-and-layout.md  2026-06-30-remaining-screens.md
docs/superpowers/specs/: 2026-04-09-user-authentication-design.md
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
frontend/nginx/: default.conf  nginx.conf
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: alerts.ts  attack.ts  audit.ts  auth.ts  campaigns.ts  client.test.ts  client.ts  correlations.ts  dashboard.ts  enrichment.ts  export.test.ts  export.ts  feeds.ts  graph.ts  notes.ts  observables.ts  relationships.ts  reports.ts  saved_searches.ts  search.ts  settings.ts  sso.ts  threat_actors.ts  users.ts
frontend/src/contexts/: AuthContext.tsx  ThemeContext.test.tsx  ThemeContext.tsx  ToastContext.tsx
frontend/src/hooks/: useAlerts.ts  useAttack.ts  useAudit.ts  useAuth.ts  useCampaigns.ts  useConfig.test.tsx  useConfig.ts  useCorrelations.ts  useDashboard.ts  useEnrichment.ts  useExport.ts  useFeeds.ts  useGraph.ts  useKeyboardShortcut.ts  useObservables.ts  useRelationships.ts  useReports.ts  useSSO.ts  useSavedSearches.ts  useSearch.ts  useTheme.ts  useThreatActors.ts  useUsers.ts
frontend/src/lib/: dashboardFormat.test.ts  dashboardFormat.ts  permissions.ts  utils.ts
frontend/src/pages/: ActivityPage.tsx  AlertsPage.tsx  AttackMatrixPage.tsx  CampaignDetailPage.tsx  CampaignsPage.tsx  CorrelationsPage.tsx  DashboardPage.test.tsx  DashboardPage.tsx  FeedsPage.test.tsx  FeedsPage.tsx  GraphExplorerPage.tsx  ImportPage.tsx  LoginPage.tsx  ObservableDetailPage.test.tsx  ObservableDetailPage.tsx  ObservablesPage.test.tsx  ObservablesPage.tsx  ReportsPage.tsx  SearchPage.tsx  SettingsPage.test.tsx  SettingsPage.tsx  ThreatActorDetailPage.tsx  ThreatActorsPage.tsx  UsersPage.tsx
frontend/src/types/: alert.ts  api.ts  attack.ts  audit.ts  auth.ts  campaign.ts  correlation.ts  dashboard.ts  enrichment.ts  export.ts  feed.ts  graph.ts  observable.ts  report.ts  (+8 more)
goals/: build_app.md  deployment.md  enrichment.md  feed_ingestion.md  manifest.md  security_audit.md  testing.md
hardprompts/: feed_analysis.md  incident_response.md  report_generation.md
memory/: MEMORY.md
src/cti/: main.py  worker.py
tests/: conftest.py
tests/test_api/: conftest.py  test_auth.py  test_export.py  test_feeds.py  test_health.py  test_observables.py  test_search.py  test_settings.py  test_stats.py
tests/test_feeds/: test_connectors.py  test_file_connector.py
tests/test_services/: test_decay_from_native.py  test_feed_service.py  test_native_confidence.py  test_observable_service.py
tools/: manifest.md
tools/db/: backup_db.sh  run_migrations.sh
tools/deploy/: docker_deploy.sh  health_check.sh
tools/security/: scan.sh
tools/test/: lint_check.sh  run_tests.sh
(+214 files in other folders)
